[package]
name = "rust_for_beginners_project_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
dialoguer = "0.10.2"
console = "0.15.2"
term-table = "1.3.2"
strum = "0.24.1"
strum_macros = "0.24.3"
lapp = "0.4.0"

[lib]
name = "display"
path = "src/bin/display/mod.rs"

